--- a/Innovant/1index.html
+++ b/Innovant/1index.html
@@ -15,12 +15,12 @@
     <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
   <![endif]-->
+
 </head>
 <body>
 <!-- HEADER =================================== -->
 	<header class="header parallax-window" id="Home" data-parallax="scroll" data-image-src="./img/header/background.jpg">
 		<div class="header__container">
-	<!-- header top -->
 			<div class="header__top">
 				<a class="header__logo" href="#">
 					<img src="./img/header/logo.png" alt="Innovant">
@@ -49,7 +49,6 @@
 					</ul>	
 				</nav>
 			</div>
-	<!-- header content -->
 			<div class="header__content">
 				<h1 class="header__caption">We Create Creative Design</h1>
 				<p class="header__text">When Creative Guys Like us Get Together, They Bring Smile on Users Face</p>
@@ -59,55 +58,53 @@
 	</header>
 <!-- ABOUT ==================================== -->
 	<section class="about" id="About">
-	<!-- cards -->
 		<div class="about__container">
 			<div class="about__card">
-				<div class="about-card__icon wow animated zoomIn" data-wow-delay="200ms">
+				<div class="about-card__icon">
 					<i class="icon-features_design"></i>
 				</div>
 				<h3 class="about-card__caption">Creative Design</h3>
 				<p class="about-card__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore . </p>
 			</div>
 			<div class="about__card">
-				<div class="about-card__icon wow animated zoomIn" data-wow-delay="200ms">
+				<div class="about-card__icon">
 					<i class="icon-features_clean"></i>
 				</div>
 				<h3 class="about-card__caption">Clean and Clear</h3>
 				<p class="about-card__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore . </p>
 			</div>
 			<div class="about__card">
-				<div class="about-card__icon wow animated zoomIn" data-wow-delay="200ms">
+				<div class="about-card__icon">
 					<i class="icon-features_pixel"></i>
 				</div>
 				<h3 class="about-card__caption">Perfect Pixel</h3>
 				<p class="about-card__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore . </p>
 			</div>
 			<div class="about__card">
-				<div class="about-card__icon wow animated zoomIn" data-wow-delay="200ms">
+				<div class="about-card__icon">
 					<i class="icon-features_trend"></i>
 				</div>
 				<h3 class="about-card__caption">Trending Item</h3>
 				<p class="about-card__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore . </p>
 			</div>
 			<div class="about__card">
-				<div class="about-card__icon wow animated zoomIn" data-wow-delay="200ms">
+				<div class="about-card__icon">
 					<i class="icon-features_grid"></i>
 				</div>
 				<h3 class="about-card__caption">Awesome Grid System</h3>
 				<p class="about-card__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore . </p>
 			</div>
 			<div class="about__card">
-				<div class="about-card__icon wow animated zoomIn" data-wow-delay="200ms">
+				<div class="about-card__icon">
 					<i class="icon-features_support"></i>
 				</div>
 				<h3 class="about-card__caption">Great Support</h3>
 				<p class="about-card__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore . </p>
 			</div>
 		</div>
-	<!-- content -->
 		<div class="about__content">
-			<img src="./img/about/innovation_design.jpg" alt="Workplace" class="about__img wow animated fadeIn">
-			<div class="about__content-wrap wow animated fadeIn" data-wow-delay="500ms">
+			<img src="./img/about/innovation_design.jpg" alt="" class="about__img">
+			<div class="about__content-wrap">
 				<h2 class="content__caption">About Innovant Design</h2>
 				<p class="content__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.<br><br>Pallamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidat  ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
 				<a href="#Portfolio" class="content__button">Learn More</a>
@@ -116,22 +113,19 @@
 	</section>
 <!-- PORTFOLIO ================================ -->
 	<section class="works" id="Portfolio">
-	<!-- caption -->
 		<header class="works__caption">
 			<h2>Our Awesome Portfolio</h2>
 		</header>
 		<p class="works__desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</p>
-	<!-- menu -->		
 		<ul class="works_menu__list">
-			<li class="works_menu__item active wow animated fadeInDown" data-wow-delay="100ms" data-category="works__card_item"><a href="#">All</a></li>
-			<li class="works_menu__item wow animated fadeInDown" data-wow-delay="300ms" data-category="uiux"><a href="#">UI/UX Design</a></li>
-			<li class="works_menu__item wow animated fadeInDown" data-wow-delay="500ms" data-category="web"><a href="#">Web Design</a></li>
-			<li class="works_menu__item wow animated fadeInDown" data-wow-delay="700ms" data-category="uiux"><a href="#">Graphic Design</a></li>
-			<li class="works_menu__item wow animated fadeInDown" data-wow-delay="900ms" data-category="web"><a href="#">Web Development</a></li>
-			<li class="works_menu__item wow animated fadeInDown" data-wow-delay="1100ms" data-category="uiux"><a href="#">Wordpress</a></li>
-			<li class="works_menu__item wow animated fadeInDown" data-wow-delay="1300ms" data-category="web"><a href="#">Photography</a></li>
+			<li class="works_menu__item active" data-category="works__card_item"><a href="#">All</a></li>
+			<li class="works_menu__item" data-category="uiux"><a href="#">UI/UX Design</a></li>
+			<li class="works_menu__item" data-category="web"><a href="#">Web Design</a></li>
+			<li class="works_menu__item" data-category="uiux"><a href="#">Graphic Design</a></li>
+			<li class="works_menu__item" data-category="web"><a href="#">Web Development</a></li>
+			<li class="works_menu__item" data-category="uiux"><a href="#">Wordpress</a></li>
+			<li class="works_menu__item" data-category="web"><a href="#">Photography</a></li>
 		</ul>
-	<!-- cards -->
 		<ul class="works__card_list">
 			<li class="works__card_item web">
 				<img class="works_card__img" src="./img/portfolio/01.jpg" alt="Portfolio Image">
@@ -216,12 +210,10 @@
 	</section>
 <!-- SERVICES ================================= -->
 	<section class="serv" id="Services">
-	<!-- caption -->
 		<header class="serv__caption">
 			<h2>Our Service</h2>
 		</header>
 		<p class="serv__desc">Pallamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-	<!-- cards -->
 		<div class="serv__container">
 			<div class="serv__card">
 				<div class="serv-card__icon"><a href="#"><i class="icon-serv_app"></i></a></div>
@@ -264,10 +256,8 @@
 <!-- FEEDBACK ================================= -->
 	<section class="fback">
 		<div class="fback__container">
-	<!-- dots -->
 			<ul class="fback__people"></ul>
 			<ul class="fback__dots"></ul>
-	<!-- slider -->
 			<h2 class="fback__caption">What Our Clint Say</h2>
 			<div class="fback__fake-slider">
 				<div></div>
@@ -317,18 +307,15 @@
 	</section>
 <!-- PRICE ==================================== -->
 	<section class="price">
-	<!-- caption -->
 		<header class="price__caption">
 			<h2>Pricing Table</h2>
 		</header>
 		<p class="price__desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</p>
-	<!-- price cards -->
 		<div class="price__container">
-			<div class="price__card wow animated zoomIn" data-wow-delay="800ms">
+			<div class="price__card">
 				<div class="price-card__topline"></div>
 				<h3 class="price-card__caption"><a href="#">Personal</a></h3>
 				<div class="price-card__cost">From <span>$99</span> Per Months</div>
-		<!-- list of fetures -->
 				<ul class="price-card__list">
 					<li class="price-card__item">
 						<h4 class="price-card__item-caption">
@@ -356,11 +343,10 @@
 					<a href="#" class="price-card__button">Get started now</a>
 				</div>
 			</div>
-			<div class="price__card wow animated zoomIn" data-wow-delay="500ms">
+			<div class="price__card">
 				<div class="price-card__topline"></div>
 				<h3 class="price-card__caption"><a href="#">Business</a></h3>
 				<div class="price-card__cost">From <span>$99</span> Per Months</div>
-		<!-- list of fetures -->
 				<ul class="price-card__list">
 					<li class="price-card__item">
 						<h4 class="price-card__item-caption">
@@ -388,11 +374,10 @@
 					<a href="#" class="price-card__button">Get started now</a>
 				</div>
 			</div>
-			<div class="price__card wow animated zoomIn" data-wow-delay="800ms">
+			<div class="price__card">
 				<div class="price-card__topline"></div>
 				<h3 class="price-card__caption"><a href="#">Unlimited</a></h3>
 				<div class="price-card__cost">From <span>$99</span> Per Months</div>
-		<!-- list of fetures -->
 				<ul class="price-card__list">
 					<li class="price-card__item">
 						<h4 class="price-card__item-caption">
@@ -420,17 +405,14 @@
 					<a href="#" class="price-card__button">Get started now</a>
 				</div>
 			</div>
-
 		</div>
 	</section>
 <!-- BLOG ===================================== -->
 	<section class="blog" id="Blog">
-	<!-- caption -->
 		<header class="blog__caption">
 			<h2>From the Blog</h2>
 		</header>
 		<p class="blog__desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</p>
-	<!-- slider -->
 		<div class="blog__slider-wrap">
 			<ul class="blog__slider">
 				<li class="blog__slider-item">
@@ -499,18 +481,16 @@
 						</div></a>
 				</li>
 			</ul>
-			<i class="icon-blog_arrow-left slider__prev-button wow animated flash" data-wow-delay="500ms"></i>
-			<i class="icon-blog_arrow-right slider__next-button wow animated flash" data-wow-delay="500ms"></i>
+			<i class="icon-blog_arrow-left slider__prev-button"></i>
+			<i class="icon-blog_arrow-right slider__next-button"></i>
 		</div>
 	</section>
 <!-- CONTANCT ================================= -->
 	<section class="contact" id="Contact">
-	<!-- caption -->
 		<header class="contact__caption">
 			<h2>Join Our Mailing List</h2>
 		</header>
 		<p class="contact__desc">We are passionate about the web and about enabling creators to make a living doing what they love.</p>
-	<!-- form -->	
 		<form method="POST" action="smart.php" class="contact__form form__default">
 			<input type="hidden" name="from" value="contact">
 			<div class="contact__input contact__input--name">
@@ -524,7 +504,6 @@
 	</section>
 <!-- FOOTER =================================== -->
 	<footer class="footer">
-	<!-- navigation -->
 		<div class="footer__container">
 			<ul class="footer__menu-lvl1">
 				<li class="menu-lvl1__item">
@@ -572,19 +551,18 @@
 			</div>
 		</div>
 	</footer>
-	<div class="copyright">&copy; Innovant . 2016 . All Right Reserved . Samsuzzaman Raju</div>
+	<div class="copyright">
+		<span>&copy; Innovant . 2016 . All Right Reserved . Samsuzzaman Raju</span>
+	</div>
 <!-- TO TOP =================================== -->
 	<a href="#" class="totop">
 		<div class="totop__arrow"></div>
 	</a>
 <!-- ========================================== -->
 <!-- ================================== SCRIPTS -->
-	<!-- external scripts -->
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-		<!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script> -->
-		<!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script> -->
-		<script src="./libs/slick_slider/slick.min.js"></script>
-    <script src="./libs/wow.min.js"></script>
-		<script src="./js/main.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+	<script src="./libs/slick_slider/slick.min.js"></script>
+  <script src="./libs/wow.min.js"></script>
+	<script src="./js/main.js"></script>
 </body>
 </html>
