google page speed optimize

--- a/Innovant/index.html
+++ b/Innovant/index.html
@@ -7,14 +7,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Innovant</title>
 <!-- ==================================== LINKS -->
-	<link rel="stylesheet" type="text/css" href="./libs/slick_slider/slick.css">
-	<link rel="stylesheet" type="text/css" href="./libs/animate.css">
-  <link rel="stylesheet" href="./css/style.css">
 
   <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
   <![endif]-->
+  <!-- first screen styles -->
+
+	<link rel="stylesheet" type="text/css" href="./css/first_screen.min.css">
+	
 </head>
 <body>
 <!-- HEADER =================================== -->
@@ -578,13 +579,14 @@
 		<div class="totop__arrow"></div>
 	</a>
 <!-- ========================================== -->
+<!-- =================================== STYLES -->
+	<link rel="stylesheet" property=stylesheet type="text/css" href="./libs/slick_slider/slick.css">
+	<link rel="stylesheet" property=stylesheet type="text/css" href="./libs/animate.css">
+  <link rel="stylesheet" property=stylesheet href="./css/styles.min.css">
 <!-- ================================== SCRIPTS -->
-	<!-- external scripts -->
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-		<!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script> -->
-		<!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script> -->
-		<script src="./libs/slick_slider/slick.min.js"></script>
-    <script src="./libs/wow.min.js"></script>
-		<script src="./js/main.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+	<script src="./libs/slick_slider/slick.min.js"></script>
+  <script src="./libs/wow.min.js"></script>
+	<script src="./js/main.min.js"></script>
 </body>
 </html>
